# tespy-user-meeting-2025

./: .gitignore  README.md  pyproject.toml
notebooks/: compressor.ipynb  debugging.ipynb  design.json  developments_roadmap.md  heatexchanger_offdesign_characteristics.ipynb  heatexchangers.ipynb  introductory.ipynb  introductory_heatexchanger.ipynb  introductory_heatexchanger_offdesign.ipynb  introductory_postprocessing.ipynb  introductory_turbine.ipynb  polynomial_compressor_with_cooling.ipynb  stable_solution.json  userdefinedeq.ipynb  userdefinedeq_cop.ipynb  userdefinedeq_custom_superheat.ipynb  userdefinedeq_minimal_pinch.ipynb  workflows.ipynb
