[project]
name = "tespy-user-meeting-2025"
version = "1.0"
description = "Notebooks for the tespy user meeting 2025"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tespy",
    "nbformat",
    "ipykernel",
    "nbconvert>=7.16.6",
    "fluprodia>=3.5.1",
]

[tool.uv.sources]
tespy = { path = "../tespy", editable = true }
